# ternary-computing-emulator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
scripts/: build_binary.py
src/ternary_emulator/: __init__.py  __main__.py  asm.py  cli.py  core.py  vm.py
tests/: test_core.py
