[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ternary-computing-emulator"
version = "1.0.0"
description = "A full balanced ternary computing emulator with CPU, assembler, and REPL"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Teephop Disawas" }]
keywords = ["ternary", "balanced-ternary", "emulator", "cpu", "assembler", "computing"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: System :: Emulators",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pyinstaller>=6"]

[project.scripts]
ternary-emulator = "ternary_emulator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/ternary_emulator"]
